syntax = "proto3";
package favorite;

// 指定生成的Go代码在你项目中的路径 以及pb的包名
option go_package = "diktok/grpc/favorite;pbfavorite";

service Favorite {
    rpc Like (LikeRequest) returns (LikeResponse) {}
    rpc Unlike (LikeRequest) returns (LikeResponse) {}
    rpc List (ListRequest) returns (ListResponse) {}
    rpc IsFavorite(IsFavoriteReq)returns(IsFavoriteResp){}
    rpc Count (CountReq) returns (CountResp) {}
}

message LikeRequest {
    int64 UserID = 1;
    int64 VideoID = 2;
}

message LikeResponse {
    int32 status_code = 1;
    string status_msg = 2;
}

message ListRequest {
    int64 UserID = 1;
}

message ListResponse {
    int32 status_code = 1;
    string status_msg = 2;
    repeated int64 video_list = 3;
}

message IsFavoriteReq{
    int64 UserID = 1;
    repeated int64 VideoID = 2;
}

message IsFavoriteResp{
    map<int64,bool> isFavorite = 1;
}

message CountReq{
    repeated int64 VideoID = 1;
}

message CountResp{
    map<int64,int64> Total = 1;
}